[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/scripts/title_screen_animations.gd" type="Script" id=1]
[ext_resource path="res://data/scripts/title_screen.gd" type="Script" id=2]
[ext_resource path="res://data/misc/title.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "exit_game"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("player_1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 56 ), Vector2( -648, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_1:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -31.0, -227.3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player_2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 88, -40 ), Vector2( 360, -416 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("player_2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15.5, 156.831 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("platform:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 64 ), Vector2( -328, -496 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("platform:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -35.893 ]
}

[sub_resource type="Animation" id=2]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("player_1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -200, 56 ), Vector2( -296, 328 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player_1:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -31.0, -264.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player_2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 88, -40 ), Vector2( 88, 56 ), Vector2( 88, 56 ), Vector2( 88, 288 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("player_2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 15.5, 15.5, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("platform:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 64 ), Vector2( 0, 64 ), Vector2( 0, 296 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("platform:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0352941, 0.713726, 0.94902, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.960784, 0.243137, 0.243137, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.654902, 0.654902, 0.654902, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="title_screen" type="Node2D"]
script = ExtResource( 2 )

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="platform" type="Polygon2D" parent="."]
position = Vector2( 0, 64 )
polygon = PoolVector2Array( -192, 8, 192, 8, 192, 24, -192, 24 )

[node name="player_1" type="Polygon2D" parent="."]
position = Vector2( -200, 56 )
rotation = -0.541052
color = Color( 0.0352941, 0.713726, 0.94902, 1 )
polygon = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16 )

[node name="player_2" type="Polygon2D" parent="."]
position = Vector2( 88, -40 )
rotation = 0.270526
color = Color( 0.137255, 0.733333, 0.678431, 1 )
polygon = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/exit_game = SubResource( 1 )
anims/start_game = SubResource( 2 )
script = ExtResource( 1 )

[node name="play" type="Button" parent="."]
anchor_right = 0.333
margin_left = -32.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 30, 10 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
anchor_right = 0.333
margin_left = -32.0
margin_top = 24.0
margin_right = 24.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 30, 10 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Sprite" parent="."]
position = Vector2( 0, -192 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
[connection signal="animation_finished" from="animation" to="animation" method="_on_animation_animation_finished"]
[connection signal="pressed" from="play" to="animation" method="_on_play_pressed"]
[connection signal="pressed" from="exit" to="animation" method="_on_exit_pressed"]
